--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>test</p>
-    <a href="sub.gfdsa030.github.io">sub</a>
+    <a href="http://sub.gfdsa.f5.si/">sub</a>
 </body>
 </html>
