--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+
+
+    <div id="home" class="a">
+        <header class="header">
+            <div t-logo>
+            <h1><a href="#"><img class="logo" src="img/logo.png" alt="ロゴ"></a></h1>
+            </div>
+            <nav>
+                <ul class="b">
+                    <li><a href="#">menu1</a></li>
+                    <li><a href="#">menu2</a></li>
+                    <li><a href="#">menu3</a></li>
+                    <li><a href="#">menu4</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="e">
+            <div class="c">
+                <h2 class="d">HelloWorld</h2>
+                <p>HTMLレイアウト</p>
+                <a class="button" href="#">詳しく見る</a>
+            </div>
+        </div>
+    </div>
+
+
     <p>test</p>
     <a href="http://sub.gfdsa.f5.si/">sub</a>
 </body>
