--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div id="home" class="a">
         <header class="header">
             <div t-logo>
-            <h1><a href="#"><img class="logo" src="img/logo.png" alt="ロゴ"></a></h1>
+            <h1><a href="#"><img class="logo" src="./icon.png" alt="icon"></a></h1>
             </div>
             <nav>
                 <ul class="b">
-                    <li><a href="#">menu1</a></li>
+                    <li><a href="https://sub.gfdsa.f5.si/">sub</a></li>
                     <li><a href="#">menu2</a></li>
                     <li><a href="#">menu3</a></li>
                     <li><a href="#">menu4</a></li>
