--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
 
 
-    <div id="home" class="a">
+    <div id="home" class="home">
         <header class="header">
             <div t-logo>
-            <h1><a href="#"><img class="logo" src="./icon.png" alt="icon"></a></h1>
+            <h1><a href="https://gfdsa.f5.si/"><img class="logo" src="./icon.png" alt="icon"></a></h1>
             </div>
             <nav>
-                <ul class="b">
-                    <li><a href="https://sub.gfdsa.f5.si/">sub</a></li>
+                <ul class="menu">
+                    <li><a href="http://sub.gfdsa.f5.si/">sub</a></li>
+                    <!--
                     <li><a href="#">menu2</a></li>
                     <li><a href="#">menu3</a></li>
                     <li><a href="#">menu4</a></li>
+                    -->
                 </ul>
             </nav>
         </header>
