--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html class="html" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
 </head>
 <body>
-
-
-    <div id="home" class="home">
+    <div class="main">
         <header class="header">
-            <div t-logo>
-            <h1><a href="https://gfdsa.f5.si/"><img class="logo" src="./icon.png" alt="icon"></a></h1>
+            <div icon>
+                <a href="http://gfdsa.f5.si"><img class="icon" src="icon.png" alt="img"></a>
             </div>
+
             <nav>
                 <ul class="menu">
-                    <li><a href="http://sub.gfdsa.f5.si/">sub</a></li>
-                    <!--
-                    <li><a href="#">menu2</a></li>
-                    <li><a href="#">menu3</a></li>
-                    <li><a href="#">menu4</a></li>
-                    -->
+                    <li><a href="http://gfdsa.f5.si">sub</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="e">
-            <div class="c">
-                <h2 class="d">HelloWorld</h2>
-                <p>HTMLレイアウト</p>
-                <a class="button" href="#">詳しく見る</a>
-            </div>
+
+        <div class="code">
+
         </div>
     </div>
 </body>
