--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <nav>
                 <ul class="menu">
-                    <li><a href="http://gfdsa.f5.si">sub</a></li>
+                    <li><a href="http://sub.gfdsa.f5.si">sub</a></li>
                 </ul>
             </nav>
         </header>
