--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         </header>
 
         <div class="code">
-            <p>maiking now</p><br>
-            <p>作成中</p>
+            <p>maiking now<br/>
+                作成中
+            </p>
             <!--ただいま学びながら作ってます　間違いなどあったらおしえてください
             I'm making it while learning profit. Please let me know if there are any mistakes.-->
         </div>
