--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 <a href="http://gfdsa.f5.si"><img class="icon" src="icon.png" alt="img"></a>
             </div>
 
+            <div class="page-title">
+                <li><a href="http://gfdsa.f5.si">GFDSA-Page</a></li>
+            </div>
+
             <nav>
                 <ul class="menu">
                     <li><a href="http://sub.gfdsa.f5.si">sub</a></li>
@@ -22,7 +26,7 @@
         </header>
 
         <div class="code">
-            <p>maiking now<br/>
+            <p><br/>
                 作成中
             </p>
             <!--ただいま学びながら作ってます　間違いなどあったらおしえてください
