--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main">
         <header class="header">
             <div icon>
-                <a href="http://gfdsa.f5.si/icon.png"><img class="icon" src="icon.png" alt="img"></a>
+                <a href="./icon.png"><img class="icon" src="./icon.png" alt="img"></a>
             </div>
 
             <div class="page-title">
