--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="http://sub.gfdsa.f5.si">sub</a></li>
+                    <li><a href="https://github.com/gfdsa030/gfdsa030.github.io">github</a></li>
                 </ul>
             </nav>
         </header>
