ボタン追加

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="code">
             <p><br/>
                 作成中
+            <button class="button">click!</button>
             </p>
             <!--ただいま学びながら作ってます　間違いなどあったらおしえてください
             I'm making it while learning profit. Please let me know if there are any mistakes.-->
