--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/icon.png" type="image/x-icon">
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
 </head>
 <body>
     <div class="main">
@@ -23,7 +23,7 @@
                 <ul class="menu">
                     <li><a href="/">Home</a></li>
                     <li><a href="http://sub.gfdsa.f5.si">sub</a></li>
-                    <li><a href="https://github.com/gfdsa030/gfdsa030.github.io">github</a></li>
+                    <li><a href="https://github.com/gfdsa030">github</a></li>
                 </ul>
             </nav>
         </header>
