--- a/index.html
+++ b/index.html
@@ -3,39 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/icon.png" type="image/x-icon">
-    <script src="/script.js"></script>
+    <title>GFDSA030</title>
 </head>
 <body>
-    <div class="main">
-        <header class="header">
-            <div icon>
-                <a href="/icon.png"><img class="icon" src="/icon.png" alt="img"></a>
-            </div>
-            <!--
-            <div class="page-title">
-                <li><a href="/">GFDSA-Page</a></li>
-            </div>
-            -->
-            <nav>
-                <ul class="menu">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="http://sub.gfdsa.f5.si">sub</a></li>
-                    <li><a href="https://github.com/gfdsa030">github</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <div class="code">
-            <p><br/>
-                作成中
-            <button class="button" onclick="message()">click!</button>
-            </p>
-            <!--ただいま学びながら作ってます　間違いなどあったらおしえてください
-            I'm making it while learning profit. Please let me know if there are any mistakes.-->
-        </div>
-    </div>
+    Hello this is GFDSA030's web site <br>
+    I'm makeing it now. <br>
+    Please wait for a moment.
 </body>
 </html>
