--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GFDSA030</title>
-</head>
-<body>
-    Hello this is GFDSA030's web site <br>
-    I'm makeing it now. <br>
+  </head>
+  <body>
+    Hello this is GFDSA030's website.
+    <br />
+    I'm making it now. <br />
     Please wait for a moment.
-</body>
+  </body>
 </html>
