--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>GFDSA030</title>
   </head>
   <body>
-    Hello this is GFDSA030's website.
-    <br />
+    Hello this is GFDSA030's website. <br />
     I'm making it now. <br />
     Please wait for a moment.
   </body>
